# llvm

clang/tools/: CMakeLists.txt
llvm/: CMakeLists.txt
llvm/include/llvm/: module.modulemap
llvm/include/llvm/ADT/: Triple.h
llvm/include/llvm/BinaryFormat/: ELF.h  WasmRelocs.def
llvm/include/llvm/CodeGen/: AsmPrinter.h
llvm/include/llvm/IR/: CMakeLists.txt  Intrinsics.td  RuntimeLibcalls.def
llvm/lib/: CMakeLists.txt
llvm/lib/IR/: Function.cpp
llvm/lib/LTO/: LTO.cpp
llvm/lib/MC/: WasmObjectWriter.cpp
llvm/lib/Object/: ELF.cpp  RelocationResolver.cpp  WasmObjectFile.cpp
llvm/lib/ObjectYAML/: ELFYAML.cpp
llvm/lib/Passes/: CMakeLists.txt  PassBuilder.cpp  PassBuilderPipelines.cpp
llvm/lib/Support/: Triple.cpp
llvm/lib/Transforms/IPO/: CMakeLists.txt  PassManagerBuilder.cpp
llvm/utils/TableGen/: FastISelEmitter.cpp
llvm/utils/gn/secondary/llvm/include/llvm/IR/: BUILD.gn
